feat: improve styles with Poppins font, sorting and others

--- a/src/pages/popup/index.css
+++ b/src/pages/popup/index.css
@@ -1,16 +1,12 @@
 body {
-  width: 600px;
+  width: 350px;
   height: 260px;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
   position: relative;
-}
-
-.apexcharts-legend {
-  display: none !important;
 }
